--- a/index.html
+++ b/index.html
@@ -46,7 +46,27 @@
       
     </header>
     <main>
+      <!-- our popular tours -->
+      <section class="o-p-t">
+        <div class="o-p-t-d">
 
+            <h2>Our Popular Tours</h2>
+            <h3 class="text">our most popular tour is mount everest .the highest mountain on earth.At 8,849 meters (29,032 feet), it is considered the tallest point on Earth. In the nineteenth century, the mountain was named after George Everest, a former Surveyor General of India. The Tibetan name is Chomolungma, which means “Mother Goddess of the World.” The Nepali name is Sagarmatha, which has various meanings.
+            <ul>
+                <li>Everest is a massive 8848 meters tall – just below the cruising height of a jumbo jet! ...</li>
+                <li>Everest is over 60 million years old. ...</li>
+                <li>Mount Everest grows approximately 44 millimetres every year. ...</li>
+                <li>Mount Everest isn't actually the tallest mountain on the planet.</li>
+            </ul>
+            Like other high peaks in the region, Mount Everest has long been revered by local peoples. Its most common Tibetan name, Chomolungma, means “Goddess Mother of the World” or “Goddess of the Valley.” The Sanskrit name Sagarmatha means literally “Peak of Heaven.” Its identity as the highest point on the Earth’s surface was not recognized, however, until 1852.
+               
+            </h3>
+            <button class="btn">Read more</button>
+        </div>
+        <div class="">
+            <img src="Images/Rectangle 4.png" alt="">
+        </div>
+      </section>
     </main>
     <footer>
 
