until why choose us

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <section class="o-p-t">
         <div class="o-p-t-d">
 
-            <h2>Our Popular Tours</h2>
+            <h2 class="title">Our Popular Tours</h2>
             <h3 class="text">our most popular tour is mount everest .the highest mountain on earth.At 8,849 meters (29,032 feet), it is considered the tallest point on Earth. In the nineteenth century, the mountain was named after George Everest, a former Surveyor General of India. The Tibetan name is Chomolungma, which means “Mother Goddess of the World.” The Nepali name is Sagarmatha, which has various meanings.
             <ul>
                 <li>Everest is a massive 8848 meters tall – just below the cruising height of a jumbo jet! ...</li>
@@ -66,6 +66,59 @@
         <div class="">
             <img src="Images/Rectangle 4.png" alt="">
         </div>
+      </section>
+      <!-- choose your destinition -->
+      <section class="c-y-d">
+        <h1 class="c-y-d-t">Choose Your Destination</h1>
+        <p class="c-y-d-p">here are the following tourist spot u can visit.we have maldives,indonesia,kashmir,bangladesh,bandarban</p>
+        <div class="row">
+               <div>
+                
+                <img class="maldives" src="Images/Rectangle 5.png" alt="">
+               </div>
+               <div>
+                <img src="Images/Rectangle 8.png" alt="">
+               </div>
+        </div>
+        <div class="row">
+               <div>
+                <img src="Images/Rectangle 6.png" alt="">
+               </div>
+               <div>
+                <img src="Images/Rectangle 7.png" alt="">
+               </div>
+               <div>
+                <img src="Images/Rectangle 9.png" alt="">
+               </div>
+        </div>
+        <div class="row">
+               <div>
+                <img src="Images/Rectangle 11.png" alt="">
+               </div>
+               <div>
+                <img src="Images/Rectangle 10.png" alt="">
+               </div>
+        </div>
+
+      </section>
+      <!-- why choose us -->
+      <section class="w-c-u">
+         <h1 class="w-c-u-t">Why Choose Us</h1>
+         <p class="w-c-u-p">there is a reason why you will choose us ,following reasons</p>
+         <div class="row-1">
+            <div class="box-1">
+                
+            </div>
+            <div class="box-2">
+
+            </div>
+         </div>
+         <div class="row-2">
+              <div class="box-3">
+
+              </div>
+
+         </div>
       </section>
     </main>
     <footer>
