until why choose us

--- a/index.html
+++ b/index.html
@@ -107,15 +107,22 @@
          <p class="w-c-u-p">there is a reason why you will choose us ,following reasons</p>
          <div class="row-1">
             <div class="box-1">
-                
+                <img src="Images/hotel 1.jpg" alt="">
+                <h1 class="box-title">Handpicked Hotels</h1>
+                <p class="text">we offer Offering free WiFi, Toyoko Inn Seoul Gangnam is located 8 km from Lotte World Tower & Lotte World Mall. The property is also located within 5 km from Seven Luck Casino Seoul Gangnam COEX Branch.</p>
             </div>
             <div class="box-2">
+                <img src="Images/map 1.jpg" alt="">
+                <h1 class="box-title">World Class Service</h1>
+                <p class="text">In the world of hospitality, a clear demarcation exists between standard accommodations and the crème de la crème of luxury hotel brands. High-end hotels represent the apex of service.</p>
 
             </div>
          </div>
          <div class="row-2">
               <div class="box-3">
-
+               <img src="Images/price-tag 1.jpg" alt="">
+               <h1 class="box-title">Best Price Guarantee</h1>
+               <p class="text">To find the cheapest hotel rooms, you'll need to consider several factors that affect the price. . Hotels with lower star ratings are going to be more affordable as well. </p>
               </div>
 
          </div>
