1st work of responsive

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
             </h3>
             <button class="btn">Read more</button>
         </div>
-        <div class="">
-            <img src="Images/Rectangle 4.png" alt="">
+        <div >
+            <img class="opti" src="Images/Rectangle 4.png" alt="">
         </div>
       </section>
       <!-- choose your destinition -->
@@ -77,26 +77,26 @@
                 <img class="maldives" src="Images/Rectangle 5.png" alt="">
                </div>
                <div>
-                <img src="Images/Rectangle 8.png" alt="">
+                <img class="nextmal" src="Images/Rectangle 8.png" alt="">
                </div>
         </div>
         <div class="row">
                <div>
-                <img src="Images/Rectangle 6.png" alt="">
+                <img class="lanka" src="Images/Rectangle 6.png" alt="">
                </div>
                <div>
-                <img src="Images/Rectangle 7.png" alt="">
+                <img class="n-a" src="Images/Rectangle 7.png" alt="">
                </div>
                <div>
-                <img src="Images/Rectangle 9.png" alt="">
+                <img class="kashmir" src="Images/Rectangle 9.png" alt="">
                </div>
         </div>
         <div class="row">
                <div>
-                <img src="Images/Rectangle 11.png" alt="">
+                <img class="bd" src="Images/Rectangle 11.png" alt="">
                </div>
                <div>
-                <img src="Images/Rectangle 10.png" alt="">
+                <img class="bandarban" src="Images/Rectangle 10.png" alt="">
                </div>
         </div>
 
