--- a/index.html
+++ b/index.html
@@ -184,6 +184,21 @@
       </section>
     </main>
     <footer>
+         <div class="f-title">
+           <div>
+            <img src="Images/Group 40071 (2).png" alt="">
+           </div> 
+           <div class="f-c">
+            <h3>Chill <span style="color: #FF5400;">Travel</span></h3>
+           </div>
+            
+         </div>
+         <p class="text">well ,thats all what we could we offer.You will definitely enjoy our services and have a great chill tour</p>
+         <div class="icon">
+            <img src="Images/Social.jpg" alt="">
+         </div>
+         <div class="line"></div>
+         <h1 class="lastl">2017, All Rights Reserved.</h1>
 
     </footer>   
 </body>
