--- a/index.html
+++ b/index.html
@@ -136,17 +136,53 @@
         <div class="d-d-i">
             <div class="pic1">
                <div class="pic1-box">
+                <div class="frame-box1">
+                    <img src="Images/Frame.jpg" alt="">
+                    <p class="text">7 Day / 6 Night</p>
+                    <img src="Images/Frame (1).jpg" alt="">
+                    <p class="text">Max : 10</p>
+                    <img src="Images/Frame (2).jpg" alt="">
+                    <p class="text">Malaysia</p>
+                </div>
                 <h1 class="title">Tour To Satorini</h1>
                 <p class="text">tour to satarini would be anyones dream .if u want refreshment please visit satarini once in a lifetime.</p>
+                <h1 class="pic1-box-price">Price: $1300-$1500</h1>
+                <button class="btn">Book now</button>
                </div>
             </div>
             <div class="pic2">
-              
+                <div class="pic2-box">
+                    <div class="frame-box2">
+                        <img src="Images/Frame.jpg" alt="">
+                        <p class="text">7 Day / 6 Night</p>
+                        <img src="Images/Frame (1).jpg" alt="">
+                        <p class="text">Max : 10</p>
+                        <img src="Images/Frame (2).jpg" alt="">
+                        <p class="text">Malaysia</p>
+                    </div>
+                    <h1 class="title">Tour To Satorini</h1>
+                    <p class="text">tour to satarini would be anyones dream .if u want refreshment please visit satarini once in a lifetime.</p>
+                    <h1 class="pic2-box-price">Price: $1300-$1500</h1>
+                    <button class="btn">Book now</button>
+                   </div>
             </div>
             <div class="pic3">
-
+                <div class="pic1-box">
+                    <div class="frame-box1">
+                        <img src="Images/Frame.jpg" alt="">
+                        <p class="text">7 Day / 6 Night</p>
+                        <img src="Images/Frame (1).jpg" alt="">
+                        <p class="text">Max : 10</p>
+                        <img src="Images/Frame (2).jpg" alt="">
+                        <p class="text">Malaysia</p>
+                    </div>
+                    <h1 class="title">Tour To Satorini</h1>
+                    <p class="text">tour to satarini would be anyones dream .if u want refreshment please visit satarini once in a lifetime.</p>
+                    <h1 class="pic1-box-price">Price: $1300-$1500</h1>
+                    <button class="btn">Book now</button>
+                   </div>
             </div>
-
+            <button class="btn sa">See All Packages</button>
             
         </div>
 
